Fixes button alignment on mobile

--- a/styles/frontend.scss
+++ b/styles/frontend.scss
@@ -4,7 +4,7 @@
   width: 100%;
 
   .jobs-button {
-    margin: 10px auto;
+    margin: 50px auto;
   }
 }
 
